--- a/day5/Makefile
+++ b/day5/Makefile
@@ -4,7 +4,7 @@ DEPENDENCIES	= include
 RM				= rm -rf
 NAME			= aoc5
 # FILE_NAME		= input.txt
-FILE_NAME		= input_test.txt
+FILE_NAME		= input_test2.txt
 CFLAGS			= -W -Wall -Werror -Wextra -pedantic -g -I $(DEPENDENCIES)
 VG				= valgrind --leak-check=full -s --track-origins=yes --show-leak-kinds=all#--log-file=leaks.log
 
